fix height overflow of home page

--- a/src/routes/HomePage/HomePageLayouts.module.css
+++ b/src/routes/HomePage/HomePageLayouts.module.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 87vh;
+  min-height: 77.5vh;
 }
